# bazel-yarn-pnp

./: .gitignore  .pnp.cjs  .yarnrc.yml  BUILD.bazel  README.md  WORKSPACE  package-lock.json  package.json
libs/bazel/: rules_node.bzl  rules_yarn2.bzl
libs/yarn/plugins/hello-world/: plugin-hello-world.js
libs/yarn/plugins/selective-install/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
libs/yarn/plugins/selective-install/bundles/@yarnpkg/: plugin-selective-install.js
libs/yarn/plugins/selective-install/src/: SelectiveInstall.ts  index.ts
libs/yarn/plugins/selective-install/src/fetcher/: LocalTarballFetcher.ts
my-project/: BUILD  generate-names.js
